# force-fuck-captcha-background

./: .gitignore  README.md  RELEASING.md  index.html  package.json  pyproject.toml  start.sh  webpack.config.js
.cursor/rules/: npm.mdc
.github/: release.yml
.github/workflows/: docs-pages.yml  python-sdk-ci.yml  release.yml  website-pages.yml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/gds/: config.yaml
_bmad/tea/: config.yaml
apps/electron-ui/: README.md  package.json  tsconfig.json  webpack.config.js
doc-website/api/: local-restore.md  slider.md  text.md
doc-website/guide/: deploy.md  type-routing.md
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/api/: auto.md  background.md  local-restore.md  overview.md  slider.md  text.md
docs/guide/: quickstart.md
electron-ui/: README.md  package-lock.json  webpack.config.js
electron-ui/docs/: TODO.md
electron-ui/src/: index.ts
go-sdk/: README.md  coverage.out  go.mod
go-sdk/captcha_background_sdk/: background_feature_engine.go  background_feature_engine_test.go  background_index.go  background_index_test.go  captcha_background_sdk.go  captcha_background_sdk_test.go  component_extractor.go  component_extractor_test.go  diff_engine.go  diff_engine_test.go  font_glyph_batch.go  font_glyph_batch_test.go  font_glyph_extractor.go  font_glyph_extractor_test.go  font_glyph_features.go  font_glyph_features_test.go  foreground_skew.go  foreground_skew_test.go  group_id.go  group_id_test.go  image_utils.go  image_utils_test.go  local_restore.go  local_restore_test.go  locator.go  locator_test.go  sdk.go  sdk_test.go  slider_locator.go  slider_locator_test.go  text_layer_renderer.go  text_layer_renderer_test.go  text_region_builder.go  text_region_builder_test.go  types.go  types_test.go  utils.go  utils_test.go
go-sdk/examples/: batch_extract.go  demo.go  local_restore.go
python-sdk/: CHANGELOG.md  Makefile  README.md  pyproject.toml
python-sdk/captcha_background_sdk/: component_extractor.py  font_glyph_images.py  font_glyph_slots.py  foreground_skew.py  local_restore_fs.py  locator.py  patch_extractor.py  recognizer.py  ts_bridge.py
python-sdk/examples/: batch_text_positions_validate.py  demo.py  pypi_smoke_test_text_positions.py
python-sdk/tests/: conftest.py  test_sdk.py
sdk/python/captcha-font-sdk/: LICENSE  README.md  pyproject.toml
sdk/python/captcha-font-sdk/captcha_font_sdk/: __init__.py  component_extractor.py  font_glyph_extractor.py  font_glyph_features.py  font_glyph_images.py  group_id.py  local_restore_runner.py  local_restore_vote.py  locator.py  mask_component_extractor.py  recognizer.py  text_region_builder.py  types.py
sdk/python/captcha-font-sdk/examples/: demo.py
typescript-sdk/: README.md  package-lock.json  package.json  tsconfig.json
website/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+198 files in other folders)
